First pass at light design, layout

--- a/index.html
+++ b/index.html
@@ -12,9 +12,86 @@
         	
 	</head>
 	<body>
-		<h1>This is a test</h1>
-	
-	
+		<header>
+			<div class="container">
+				<h1 class="logo">Evan Huntley</h1>
+				<nav>
+					<ul>
+						<li><a href="#">Work</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Contact</a></li>
+					</ul>
+				</nav>
+				
+				<div class="hero">
+					<h1>{ I Write Code }</h1>
+					<p>My name is Evan Huntley, and I am a web developer.</p>				
+				</div>
+			</div>
+		</header>
+		
+		<section class="work">
+			<div class="container">
+			<h2>My Work</h2>
+			<ul>
+				<li class="portfolio-item">
+					<figure>
+						<a href="http://www.sirchie.com"><img src="assets/img/g_sirchie.jpg" /></a>
+						<figcaption>
+							<h3>Sirchie</h3>
+							<p>HTML, CSS, PHP, Responsive, Magento</p>
+						</figcaption>
+					</figure>
+				</li>
+				<li class="portfolio-item">
+					<figure>
+						<a href="http://ncchamber.net"><img src="assets/img/g_nc-chamber.jpg" /></a>
+						<figcaption>
+							<h3>NC Chamber</h3>
+							<p>HTML, CSS, PHP, Responsive, Wordpress</p>
+						</figcaption>
+					</figure>
+				</li>
+				<li class="portfolio-item">
+					<figure>
+						<a href="http://studentblue.bcbs.com"><img src="assets/img/g_bcbs.jpg" /></a>
+						<figcaption>
+							<h3>Blue Cross Blue Shield Student Blue</h3>
+							<p>HTML, CSS, Responsive</p>
+						</figcaption>
+					</figure>
+				</li>
+				<li class="portfolio-item">
+					<figure>
+						<a href="http://www.sirchie.com"><img src="assets/img/g_sirchie.jpg" /></a>
+						<figcaption>
+							<h3>Sirchie</h3>
+							<p>HTML, CSS, PHP, Responsive, Magento</p>
+						</figcaption>
+					</figure>
+				</li>
+			</ul>
+			</div>
+		</section>
+
+		<section class="about">
+			<div class="container">
+				<h2>About Me</h2>
+				<p>My name is Evan Huntley, and I am a web developer residing in the Raleigh-Durham area.  I build websites both professionally and for pleasure.  Like a chef, my ingredients may differ, but my goal is ultimately the same: to provide an experience to the user that pleases the palate.</p>
+			</div>
+		</section>
+		
+		<section class="contact">
+			<div class="container">
+				<h2>Contact</h2>
+			</div>
+		</section>
+		
+		<footer>
+			<div class="container">
+			</div>
+		</footer>
+		
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
         <script src="js/scripts.min.js"></script>
