Adding all portfolio items

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<ul>
 				<li class="portfolio-item">
 					<figure>
-						<a href="http://www.sirchie.com"><img src="assets/img/g_sirchie.jpg" /></a>
+						<a href="http://www.sirchie.com"><img src="assets/img/g_sirchie.png" /></a>
 						<figcaption>
 							<h3>Sirchie</h3>
 							<p>HTML, CSS, PHP, Responsive, Magento</p>
@@ -45,7 +45,7 @@
 				</li>
 				<li class="portfolio-item">
 					<figure>
-						<a href="http://ncchamber.net"><img src="assets/img/g_nc-chamber.jpg" /></a>
+						<a href="http://ncchamber.net"><img src="assets/img/g_nc-chamber.png" /></a>
 						<figcaption>
 							<h3>NC Chamber</h3>
 							<p>HTML, CSS, PHP, Responsive, Wordpress</p>
@@ -54,7 +54,7 @@
 				</li>
 				<li class="portfolio-item">
 					<figure>
-						<a href="http://studentblue.bcbs.com"><img src="assets/img/g_bcbs.jpg" /></a>
+						<a href="http://studentblue.bcbs.com"><img src="assets/img/g_bcbs.png" /></a>
 						<figcaption>
 							<h3>Blue Cross Blue Shield Student Blue</h3>
 							<p>HTML, CSS, Responsive</p>
@@ -63,10 +63,46 @@
 				</li>
 				<li class="portfolio-item">
 					<figure>
-						<a href="http://www.sirchie.com"><img src="assets/img/g_sirchie.jpg" /></a>
+						<a href="http://www.officerelief.com"><img src="assets/img/g_office-relief.png" /></a>
 						<figcaption>
-							<h3>Sirchie</h3>
-							<p>HTML, CSS, PHP, Responsive, Magento</p>
+							<h3>Office Relief</h3>
+							<p>HTML, CSS, PHP, Magento</p>
+						</figcaption>
+					</figure>
+				</li>
+				<li class="portfolio-item">
+					<figure>
+						<a href="http://www.curecancerstarter.org"><img src="assets/img/g_cure-cancer.png" /></a>
+						<figcaption>
+							<h3>Cure Cancer Starter</h3>
+							<p>HTML, CSS, Responsive</p>
+						</figcaption>
+					</figure>
+				</li>
+				<li class="portfolio-item">
+					<figure>
+						<a href="http://www.vnatc.com"><img src="assets/img/g_vnatc.png" /></a>
+						<figcaption>
+							<h3>VNA of the Treasure Coast</h3>
+							<p>HTML, CSS, PHP, Wordpress, Responsive</p>
+						</figcaption>
+					</figure>
+				</li>
+				<li class="portfolio-item">
+					<figure>
+						<a href="http://www.ruggeropiano.com"><img src="assets/img/g_ruggero.png" /></a>
+						<figcaption>
+							<h3>Ruggero Piano</h3>
+							<p>HTML, CSS, PHP, Wordpress</p>
+						</figcaption>
+					</figure>
+				</li>
+				<li class="portfolio-item">
+					<figure>
+						<a href="http://www.royaloakstairs.com"><img src="assets/img/g_royal-oak.png" /></a>
+						<figcaption>
+							<h3>Royal Oak Stairs</h3>
+							<p>HTML, CSS, PHP, Wordpress, Responsive</p>
 						</figcaption>
 					</figure>
 				</li>
