Getting header working responsively

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				</nav>
 				
 				<div class="hero">
-					<h1>{ I Write Code }</h1>
+					<h1><span>{</span> I Write Code <span>}</span></h1>
 					<p>My name is Evan Huntley, and I am a web developer.</p>				
 				</div>
 			</div>
@@ -36,7 +36,7 @@
 			<ul>
 				<li class="portfolio-item">
 					<figure>
-						<a href="http://www.sirchie.com"><img src="assets/img/g_sirchie.png" /></a>
+						<a href="http://www.sirchie.com"><img alt="Sirchie" src="assets/img/g_sirchie.png" /></a>
 						<figcaption>
 							<h3>Sirchie</h3>
 							<p>HTML, CSS, PHP, Responsive, Magento</p>
@@ -45,16 +45,16 @@
 				</li>
 				<li class="portfolio-item">
 					<figure>
-						<a href="http://ncchamber.net"><img src="assets/img/g_nc-chamber.png" /></a>
+						<a href="http://ncchamber.net"><img alt="NC Chamber" src="assets/img/g_nc-chamber.png" /></a>
 						<figcaption>
-							<h3>NC Chamber</h3>
+							<h3>N.C. Chamber of Commerce</h3>
 							<p>HTML, CSS, PHP, Responsive, Wordpress</p>
 						</figcaption>
 					</figure>
 				</li>
 				<li class="portfolio-item">
 					<figure>
-						<a href="http://studentblue.bcbs.com"><img src="assets/img/g_bcbs.png" /></a>
+						<a href="http://studentblue.bcbs.com"><img alt="Blue Cross Blue Shield Student Blue" src="assets/img/g_bcbs.png" /></a>
 						<figcaption>
 							<h3>Blue Cross Blue Shield Student Blue</h3>
 							<p>HTML, CSS, Responsive</p>
@@ -63,7 +63,7 @@
 				</li>
 				<li class="portfolio-item">
 					<figure>
-						<a href="http://www.officerelief.com"><img src="assets/img/g_office-relief.png" /></a>
+						<a href="http://www.officerelief.com"><img alt="Office Relief" src="assets/img/g_office-relief.png" /></a>
 						<figcaption>
 							<h3>Office Relief</h3>
 							<p>HTML, CSS, PHP, Magento</p>
@@ -72,7 +72,7 @@
 				</li>
 				<li class="portfolio-item">
 					<figure>
-						<a href="http://www.curecancerstarter.org"><img src="assets/img/g_cure-cancer.png" /></a>
+						<a href="http://www.curecancerstarter.org"><img alt="Cure Cancer Starter" src="assets/img/g_cure-cancer.png" /></a>
 						<figcaption>
 							<h3>Cure Cancer Starter</h3>
 							<p>HTML, CSS, Responsive</p>
@@ -81,7 +81,7 @@
 				</li>
 				<li class="portfolio-item">
 					<figure>
-						<a href="http://www.vnatc.com"><img src="assets/img/g_vnatc.png" /></a>
+						<a href="http://www.vnatc.com"><img alt="VNATC" src="assets/img/g_vnatc.png" /></a>
 						<figcaption>
 							<h3>VNA of the Treasure Coast</h3>
 							<p>HTML, CSS, PHP, Wordpress, Responsive</p>
@@ -90,7 +90,7 @@
 				</li>
 				<li class="portfolio-item">
 					<figure>
-						<a href="http://www.ruggeropiano.com"><img src="assets/img/g_ruggero.png" /></a>
+						<a href="http://www.ruggeropiano.com"><img alt="Ruggero Piano" src="assets/img/g_ruggero.png" /></a>
 						<figcaption>
 							<h3>Ruggero Piano</h3>
 							<p>HTML, CSS, PHP, Wordpress</p>
@@ -99,7 +99,7 @@
 				</li>
 				<li class="portfolio-item">
 					<figure>
-						<a href="http://www.royaloakstairs.com"><img src="assets/img/g_royal-oak.png" /></a>
+						<a href="http://www.royaloakstairs.com"><img alt="Royal Oak Stairs" src="assets/img/g_royal-oak.png" /></a>
 						<figcaption>
 							<h3>Royal Oak Stairs</h3>
 							<p>HTML, CSS, PHP, Wordpress, Responsive</p>
@@ -113,13 +113,19 @@
 		<section class="about">
 			<div class="container">
 				<h2>About Me</h2>
-				<p>My name is Evan Huntley, and I am a web developer residing in the Raleigh-Durham area.  I build websites both professionally and for pleasure.  Like a chef, my ingredients may differ, but my goal is ultimately the same: to provide an experience to the user that pleases the palate.</p>
+				<figure>
+					<img src="assets/img/g_evan.png" alt="Evan Huntley" />
+				</figure>
+				<p>I'm a web developer living in the Raleigh-Durham area of North Carolina with my wife and three wonderful kids.</p>
+				<p>Building standards-based websites has been my profession since mid-2008, when a family member suggested that I might be interested in web development because I was "good with computers."  Since then, I've devoured every resource I can get my hands on in order to learn more about my craft.</p>
+				<p>I've worked in the agency world as well as higher education, and have integrated code with over a dozen content management systems.  Like a chef, I aim to produce quality results no matter what ingredients are placed before me.</p>
 			</div>
 		</section>
 		
 		<section class="contact">
 			<div class="container">
 				<h2>Contact</h2>
+				<p>Some places you can find me...</p>
 			</div>
 		</section>
 		
