--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 				<h1 class="logo">Evan Huntley</h1>
 				<nav>
 					<ul>
-						<li><a href="#">Work</a></li>
-						<li><a href="#">About</a></li>
-						<li><a href="#">Contact</a></li>
+						<li><a href="#work">Work</a></li>
+						<li><a href="#about">About</a></li>
+						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
 				
@@ -30,7 +30,7 @@
 			</div>
 		</header>
 		
-		<section class="work">
+		<section class="work" id="work">
 			<div class="container">
 			<h2>My Work</h2>
 			<ul>
@@ -110,7 +110,7 @@
 			</div>
 		</section>
 
-		<section class="about">
+		<section class="about" id="about">
 			<div class="container">
 				<h2>About Me</h2>
 				<figure>
@@ -122,7 +122,7 @@
 			</div>
 		</section>
 		
-		<section class="contact">
+		<section class="contact" id="contact">
 			<div class="container">
 				<h2>Contact</h2>
 				<p>Some places you can find me...</p>
@@ -136,7 +136,7 @@
 		
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
-        <script src="js/scripts.min.js"></script>
+        <script src="assets/js/scripts.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
