Performance enhancements -ments via htaccess and squishing images

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<ul>
 				<li class="portfolio-item">
 					<figure>
-						<a href="http://www.sirchie.com"><img alt="Sirchie" src="assets/img/g_sirchie.png" /></a>
+						<a href="http://www.sirchie.com"><img alt="Sirchie" src="assets/img/g_sirchie.jpg" /></a>
 						<figcaption>
 							<h3>Sirchie</h3>
 							<p>HTML, CSS, PHP, Responsive, Magento</p>
@@ -45,7 +45,7 @@
 				</li>
 				<li class="portfolio-item">
 					<figure>
-						<a href="http://ncchamber.net"><img alt="NC Chamber" src="assets/img/g_nc-chamber.png" /></a>
+						<a href="http://ncchamber.net"><img alt="NC Chamber" src="assets/img/g_nc-chamber.jpg" /></a>
 						<figcaption>
 							<h3>N.C. Chamber of Commerce</h3>
 							<p>HTML, CSS, PHP, Responsive, Wordpress</p>
@@ -54,7 +54,7 @@
 				</li>
 				<li class="portfolio-item">
 					<figure>
-						<a href="http://studentblue.bcbs.com"><img alt="Blue Cross Blue Shield Student Blue" src="assets/img/g_bcbs.png" /></a>
+						<a href="http://studentblue.bcbs.com"><img alt="Blue Cross Blue Shield Student Blue" src="assets/img/g_bcbs.jpg" /></a>
 						<figcaption>
 							<h3>Blue Cross Blue Shield Student Blue</h3>
 							<p>HTML, CSS, Responsive</p>
@@ -63,7 +63,7 @@
 				</li>
 				<li class="portfolio-item">
 					<figure>
-						<a href="http://www.officerelief.com"><img alt="Office Relief" src="assets/img/g_office-relief.png" /></a>
+						<a href="http://www.officerelief.com"><img alt="Office Relief" src="assets/img/g_office-relief.jpg" /></a>
 						<figcaption>
 							<h3>Office Relief</h3>
 							<p>HTML, CSS, PHP, Magento</p>
@@ -72,7 +72,7 @@
 				</li>
 				<li class="portfolio-item">
 					<figure>
-						<a href="http://www.curecancerstarter.org"><img alt="Cure Cancer Starter" src="assets/img/g_cure-cancer.png" /></a>
+						<a href="http://www.curecancerstarter.org"><img alt="Cure Cancer Starter" src="assets/img/g_cure-cancer.jpg" /></a>
 						<figcaption>
 							<h3>Cure Cancer Starter</h3>
 							<p>HTML, CSS, Responsive</p>
@@ -81,7 +81,7 @@
 				</li>
 				<li class="portfolio-item">
 					<figure>
-						<a href="http://www.vnatc.com"><img alt="VNATC" src="assets/img/g_vnatc.png" /></a>
+						<a href="http://www.vnatc.com"><img alt="VNATC" src="assets/img/g_vnatc.jpg" /></a>
 						<figcaption>
 							<h3>VNA of the Treasure Coast</h3>
 							<p>HTML, CSS, PHP, Wordpress, Responsive</p>
@@ -90,7 +90,7 @@
 				</li>
 				<li class="portfolio-item">
 					<figure>
-						<a href="http://www.ruggeropiano.com"><img alt="Ruggero Piano" src="assets/img/g_ruggero.png" /></a>
+						<a href="http://www.ruggeropiano.com"><img alt="Ruggero Piano" src="assets/img/g_ruggero.jpg" /></a>
 						<figcaption>
 							<h3>Ruggero Piano</h3>
 							<p>HTML, CSS, PHP, Wordpress</p>
@@ -99,7 +99,7 @@
 				</li>
 				<li class="portfolio-item">
 					<figure>
-						<a href="http://www.royaloakstairs.com"><img alt="Royal Oak Stairs" src="assets/img/g_royal-oak.png" /></a>
+						<a href="http://www.royaloakstairs.com"><img alt="Royal Oak Stairs" src="assets/img/g_royal-oak.jpg" /></a>
 						<figcaption>
 							<h3>Royal Oak Stairs</h3>
 							<p>HTML, CSS, PHP, Wordpress, Responsive</p>
@@ -114,7 +114,7 @@
 			<div class="container">
 				<h2>About Me</h2>
 				<figure>
-					<img src="assets/img/g_evan.png" alt="Evan Huntley" />
+					<img src="assets/img/g_evan.jpg" alt="Evan Huntley" />
 				</figure>
 				<p>I'm a web developer living in the Raleigh-Durham area of North Carolina with my wife and three wonderful kids.</p>
 				<p>Building standards-based websites has been my profession since mid-2008, when a family member suggested that I might be interested in web development because I was "good with computers."  Since then, I've devoured every resource I can get my hands on in order to learn more about my craft.</p>
