Adding meta description and some other missing info

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Evan Huntley - Web Developer / Designer in Raleigh, NC</title>
-        <meta name="description" content="">
+        <meta name="description" content="I'm a web developer in the Raleigh-Durham area of North Carolina, specializing in crafting quality user experiences with standards-based code.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
         
-        <link rel="stylesheet" href="assets/css/styles.min.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
         	
 	</head>
 	<body>
@@ -39,16 +39,7 @@
 						<a href="http://www.sirchie.com"><img alt="Sirchie" src="assets/img/g_sirchie.jpg" /></a>
 						<figcaption>
 							<h3>Sirchie</h3>
-							<p>HTML, CSS, PHP, Responsive, Magento</p>
-						</figcaption>
-					</figure>
-				</li>
-				<li class="portfolio-item">
-					<figure>
-						<a href="http://ncchamber.net"><img alt="NC Chamber" src="assets/img/g_nc-chamber.jpg" /></a>
-						<figcaption>
-							<h3>N.C. Chamber of Commerce</h3>
-							<p>HTML, CSS, PHP, Responsive, Wordpress</p>
+							<p>HTML, CSS, PHP, jQuery, Responsive, Magento</p>
 						</figcaption>
 					</figure>
 				</li>
@@ -57,7 +48,16 @@
 						<a href="http://studentblue.bcbs.com"><img alt="Blue Cross Blue Shield Student Blue" src="assets/img/g_bcbs.jpg" /></a>
 						<figcaption>
 							<h3>Blue Cross Blue Shield Student Blue</h3>
-							<p>HTML, CSS, Responsive</p>
+							<p>HTML, CSS, jQuery, Responsive</p>
+						</figcaption>
+					</figure>
+				</li>
+				<li class="portfolio-item">
+					<figure>
+						<a href="http://ncchamber.net"><img alt="NC Chamber" src="assets/img/g_nc-chamber.jpg" /></a>
+						<figcaption>
+							<h3>N.C. Chamber of Commerce</h3>
+							<p>HTML, CSS, PHP, jQuery, Responsive, Wordpress</p>
 						</figcaption>
 					</figure>
 				</li>
@@ -66,7 +66,7 @@
 						<a href="http://www.officerelief.com"><img alt="Office Relief" src="assets/img/g_office-relief.jpg" /></a>
 						<figcaption>
 							<h3>Office Relief</h3>
-							<p>HTML, CSS, PHP, Magento</p>
+							<p>HTML, CSS, PHP, jQuery, Magento</p>
 						</figcaption>
 					</figure>
 				</li>
@@ -75,7 +75,7 @@
 						<a href="http://www.curecancerstarter.org"><img alt="Cure Cancer Starter" src="assets/img/g_cure-cancer.jpg" /></a>
 						<figcaption>
 							<h3>Cure Cancer Starter</h3>
-							<p>HTML, CSS, Responsive</p>
+							<p>HTML, CSS, jQuery, Responsive</p>
 						</figcaption>
 					</figure>
 				</li>
@@ -84,7 +84,7 @@
 						<a href="http://www.vnatc.com"><img alt="VNATC" src="assets/img/g_vnatc.jpg" /></a>
 						<figcaption>
 							<h3>VNA of the Treasure Coast</h3>
-							<p>HTML, CSS, PHP, Wordpress, Responsive</p>
+							<p>HTML, CSS, PHP, jQuery, Wordpress, Responsive</p>
 						</figcaption>
 					</figure>
 				</li>
@@ -93,7 +93,7 @@
 						<a href="http://www.ruggeropiano.com"><img alt="Ruggero Piano" src="assets/img/g_ruggero.jpg" /></a>
 						<figcaption>
 							<h3>Ruggero Piano</h3>
-							<p>HTML, CSS, PHP, Wordpress</p>
+							<p>HTML, CSS, PHP, jQuery, Wordpress</p>
 						</figcaption>
 					</figure>
 				</li>
@@ -102,7 +102,7 @@
 						<a href="http://www.royaloakstairs.com"><img alt="Royal Oak Stairs" src="assets/img/g_royal-oak.jpg" /></a>
 						<figcaption>
 							<h3>Royal Oak Stairs</h3>
-							<p>HTML, CSS, PHP, Wordpress, Responsive</p>
+							<p>HTML, CSS, PHP, jQuery, Wordpress, Responsive</p>
 						</figcaption>
 					</figure>
 				</li>
