--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
         <meta charset="utf-8">
@@ -6,7 +7,7 @@
         <meta name="description" content="I'm a web developer in the Raleigh-Durham area of North Carolina, specializing in crafting quality user experiences with standards-based code.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
+        <link rel="shortcut icon" type="image/ico" href="/favicon.ico">
         
         <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
         	
@@ -124,15 +125,16 @@
 		
 		<section class="contact" id="contact">
 			<div class="container">
-				<h2>Contact</h2>
-				<p>Some places you can find me...</p>
+				<h2>Let's work together</h2>
+				<p>Shoot me a line at <a href="mailto:hello@evanhuntley.com">hello@evanhuntley.com</a>, or connect with me through one of the services below.</p>
+				<ul class="social">
+					<li><a href="https://twitter.com/evanhuntley"><i class="icon-twitter"></i></a></li>
+					<li><a href="http://www.linkedin.com/in/evanhuntley"><i class="icon-linkedin"></i></a></li>
+					<li><a href="https://github.com/evanhuntley"><i class="icon-github"></i></a></li>
+					<li><a href="http://instagram.com/evanhuntley"><i class="icon-instagram"></i></a></li>
+				</ul>
 			</div>
 		</section>
-		
-		<footer>
-			<div class="container">
-			</div>
-		</footer>
 		
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
