Adding portfolio item

--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
 				</li>
 				<li class="portfolio-item">
 					<figure>
+						<a href="/strwrzit"><img alt="Strwrzit" src="assets/img/g_strwrzit.jpg" /></a>
+						<figcaption>
+							<h3>STRWRZIT</h3>
+							<p>HTML, CSS, jQuery, Responsive</p>
+						</figcaption>
+					</figure>
+				</li>
+				<li class="portfolio-item">
+					<figure>
 						<a href="http://ncchamber.net"><img alt="NC Chamber" src="assets/img/g_nc-chamber.jpg" /></a>
 						<figcaption>
 							<h3>N.C. Chamber of Commerce</h3>
